--- a/assets/scss/pages/_style.scss
+++ b/assets/scss/pages/_style.scss
@@ -479,7 +479,7 @@
   .owl-carousel .owl-nav button.owl-prev {
     width: 25px;
     height: 25px;
-    background-color: red;
+    background-color: #eb4d4b;
     color: white;
     font-weight: 600;
   }
