Project 98% is done

--- a/assets/scss/pages/_clipboard.scss
+++ b/assets/scss/pages/_clipboard.scss
@@ -1,4 +1,8 @@
 
+body{
+  font-family: "Poppins";
+}
+
 #clipboard {
     .clipboard_background {
       background-image: url(../images/breadcrumb.png);
