--- a/assets/scss/pages/_htcTouch.scss
+++ b/assets/scss/pages/_htcTouch.scss
@@ -2,6 +2,11 @@
 @import "./footer";
 @import "./clipboard";
 
+body{
+  font-family: "Poppins";
+}
+
+
 #htc {
   margin-top: 30px;
   margin-bottom: 30px;
