--- a/assets/scss/pages/_login.scss
+++ b/assets/scss/pages/_login.scss
@@ -2,6 +2,10 @@
 @import "./footer";
 @import "./clipboard";
 
+body{
+  font-family: "Poppins";
+}
+
 #login {
   padding-top: 50px;
   padding-bottom: 50px;
