--- a/assets/scss/pages/_cart.scss
+++ b/assets/scss/pages/_cart.scss
@@ -2,6 +2,11 @@
 @import "./footer";
 @import "./clipboard";
 
+
+body{
+  font-family: "Poppins";
+}
+
 #carts {
   .table-responsive {
     .table {
