--- a/assets/scss/pages/_registr.scss
+++ b/assets/scss/pages/_registr.scss
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+body{
+  font-family: "Poppins";
+}
+
 #registration {
   padding-top: 30px;
   padding-bottom: 30px;
